[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fight/Human Player/deck.gd" type="Script" id=1]
[ext_resource path="res://Symbols/Textures/kisspng-check-mark-computer-icons-sign-clip-art-mark-cross-5b1386afeeab58.6604161215280063199776.png" type="Texture" id=2]
[ext_resource path="res://Symbols/Textures/card_hand.png" type="Texture" id=3]
[ext_resource path="res://Fight/Human Player/deck_highlight.gd" type="Script" id=4]
[ext_resource path="res://Fight/Assets/selected_board_cell_material.tres" type="Material" id=5]
[ext_resource path="res://Symbols/Textures/energy.tres" type="Texture" id=6]
[ext_resource path="res://Symbols/Textures/health.tres" type="Texture" id=7]
[ext_resource path="res://Fight/Human Player/spike.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.45, 0.1, 0.5 )

[sub_resource type="QuadMesh" id=5]
material = ExtResource( 5 )
size = Vector2( 1, 1.1 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 0.195, 0.051 )

[sub_resource type="QuadMesh" id=7]
size = Vector2( 0.051, 0.195 )

[node name="deck" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -1 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="deck_list" type="Spatial" parent="."]
transform = Transform( -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )

[node name="deck_highlight" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5034e-05, 0, 0 )
script = ExtResource( 4 )

[node name="Highlitght" type="MeshInstance" parent="deck_highlight"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="CantTake" type="Sprite3D" parent="deck_highlight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
flip_v = true
pixel_size = 0.001
axis = 1
texture = ExtResource( 2 )

[node name="TakeDamage" type="Spatial" parent="deck_highlight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -0.174023 )

[node name="Sprite3D" type="Sprite3D" parent="deck_highlight/TakeDamage"]
transform = Transform( 0.458467, 0, 0, 0, 0.458467, 0, 0, 0, 0.458467, -0.192849, 2.38419e-07, -0.0456625 )
flip_v = true
axis = 1
texture = ExtResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="deck_highlight/TakeDamage"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.134064, 0, -0.0203075 )
mesh = SubResource( 6 )
material/0 = null

[node name="TakeOne" type="Spatial" parent="deck_highlight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.216769 )

[node name="Sprite3D" type="Sprite3D" parent="deck_highlight/TakeOne"]
transform = Transform( 0.458467, 0, 0, 0, 0.458467, 0, 0, 0, 0.458467, -0.192849, 2.38419e-07, -0.0456625 )
flip_v = true
pixel_size = 0.006
axis = 1
texture = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="deck_highlight/TakeOne"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.134064, 0, -0.0203075 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="deck_highlight/TakeOne"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.134064, 0, -0.0203075 )
mesh = SubResource( 7 )
material/0 = null

[node name="Spike" parent="deck_highlight" instance=ExtResource( 8 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 2.5034e-05, -0.00799999, 0 )

[node name="Cost" type="Spatial" parent="deck_highlight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -0.174023 )

[node name="Sprite3D" type="Sprite3D" parent="deck_highlight/Cost"]
transform = Transform( 0.458467, 0, 0, 0, 0.458467, 0, 0, 0, 0.458467, -0.192849, 2.38419e-07, -0.0456625 )
flip_v = true
axis = 1
texture = ExtResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="deck_highlight/Cost"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.134064, 0, -0.0203075 )
mesh = SubResource( 6 )
material/0 = null

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
